<resources>
    <string name="app_name">Curf n Surf</string>

    <string name="purpose_1">Going to a pharmacy, visiting a physician or for blood donation or laboratory testing for Covid-19 or for vaccination at the vaccination centres</string>
    <string name="purpose_2">Going to a retail shop or a catering establishment</string>
    <string name="purpose_3">Going to the bank for transactions not available online</string>
    <string name="purpose_4">Strictly necessary visits to public services or services of the wider public sector and local authorities</string>
    <string name="purpose_5">Providing assistance to people who are unable to take care of themselves or people who must protect themselves or who are in self-isolation and/or in places of compulsory isolation or for visiting a residence or a nursing home or a home/hostel for vulnerable groups</string>
    <string name="purpose_6">Going for physical activity or to public gathering places where access is permitted</string>
    <string name="purpose_7">Going to church for mass or for other types of religious worship or for individual prayer or for attending a ceremony, e.g. funeral, wedding, christening</string>
    <string name="purpose_8">Any other reason that may be justified under the lockdown measures</string>
    <string name="purpose_9">Going to a business/organisation the operation of which has not been suspended by virtue of the Quarantine Decrees</string>

    <string name="ask_purpose">What\s your purpose for leaving home?</string>
    <string name="id_number_hint">ID or Passport</string>
    <string name="post_code_hint">Post code</string>
    <string name="send">Send</string>
    <string name="error_needs_to_be_number">Needs to be a number</string>
    <string name="cant_be_empty">Can\'t be empty</string>
    <string name="numbers_only">Numbers only</string>
    <string name="form_null_msg">Please complete all form fields</string>
    <string name="version_placeholder">Version %1$s</string>

    <string name="about">About</string>
    <string name="not_official">THIS IS NOT AN OFFICIAL APP</string>
    <string name="about_app_descr">Helper app that automates the process of sending an SMS to declare purpose of movement in Cyprus, while the COVID-19 pandemic measures are in effect. \n\nPlease use responsibly. We all want to survive this.</string>
    <string name="privacy_policy_title">Privacy Policy</string>
    <string name="privacy_policy_body">We don\'t store your data, period.</string>
    <string name="copyright_footer">© 2021 Konstantinos Papageorgiou.\nLicensed under the Apache License, Version 2.0</string>
    <string name="code_on_github">Code on </string>
    <string name="libs_screen_title">Curf n Surf was created using these libraries:</string>

    <string-array name="screen_titles">
        <item>Purpose</item>
        <item>ID or passport</item>
        <item>Post code</item>
    </string-array>
</resources>
