<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:nestedScrollingEnabled="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >


        <FrameLayout
            android:id="@+id/top_section"
            android:layout_width="match_parent"
            android:layout_height="224dp"
            android:background="@color/colorAccent"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:elevation="8dp"
                    android:outlineProvider="background"
                    android:padding="8dp"
                    android:src="@mipmap/ic_launcher_round" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="serif"
                        android:text="@string/app_name"
                        android:letterSpacing="0.05"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        android:textColor="@color/text_dark_color" />

                    <TextView
                        android:id="@+id/txt_version"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:textColor="@color/text_dark_color"
                        android:fontFamily="monospace"
                        tools:text="version x.x.x"/>
                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/btn_github"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|start"
                android:gravity="bottom"
                android:background="?selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:padding="8dp">

                <TextView
                    android:id="@+id/txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/text_dark_color"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Tooltip"
                    android:text="@string/code_on_github"
                    />

                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:padding="2dp"
                    android:src="@drawable/ic_github_logo_vector"
                    />

            </LinearLayout>


        </FrameLayout>

        <LinearLayout
            android:id="@+id/bottom_section"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/white_bg_color"
            android:orientation="vertical"
            android:paddingHorizontal="16dp"
            android:paddingVertical="24dp"
            android:layout_weight="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/not_official"
                android:textAllCaps="true"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                android:textStyle="bold"
                android:fontFamily="serif"
                android:textColor="@color/text_dark_color"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textColor="@color/text_dark_color"
                android:textSize="14sp"
                android:fontFamily="serif"
                android:text="@string/about_app_descr"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/privacy_policy_title"
                android:textAllCaps="true"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                android:textStyle="bold"
                android:layout_marginTop="16dp"
                android:fontFamily="serif"
                android:textColor="@color/text_dark_color"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textColor="@color/text_dark_color"
                android:textSize="14sp"
                android:fontFamily="serif"
                android:text="@string/privacy_policy_body"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textSize="10sp"
                android:textColor="@color/text_dark_color"
                android:fontFamily="serif"
                app:autoSizeMaxTextSize="12sp"
                app:autoSizeMinTextSize="8sp"
                app:autoSizeStepGranularity="2sp"
                android:text="@string/copyright_footer"
                />

        </LinearLayout>

    </LinearLayout>


</ScrollView>